# webserver-rust

./: .env  Cargo.toml  README.md
src/: check_config.rs  database.rs  error_handler.rs  form_process.rs  help  init.rs  log.rs  main.rs  render_index.rs  time.rs  uploads.rs
src/email_validator/: README.md  mod.rs
src/form_config/: README.md  mod.rs
src/input_validator/: README.md  mod.rs
src/templates/: form.tera  index.tera
