[package]
name = "rust-basic-asyncwebserver"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-multipart = "0.6.0"
actix-session = "0.5"
actix-web = "4.3.1"
chrono = "0.4.26"
colored = "2.0.0"
dotenv = "0.15.0"
env_logger = "0.10.0"
futures = "0.3.28"
futures-util = "0.3.28"
lettre = "0.10.4"
lettre_email = "0.9.4"
serde_json = "1.0.96"
tera = "1.11.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
